# mcp-server

./: .dockerignore  .gitmodules  App.jsx  Dockerfile  LICENSE  README.md  app.py  docker-compose.yaml  log.py  pyproject.toml
.cursor/: mcp.json
rn_gen/: __init__.py  llm_client.py
src/: app.py  models.py  supabase.py
src/js_bundle_upload/: build_upload_script.py  main.py  test-index.jsx
src/mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rn_gen/: __init__.py  prompt.py  prompt.txt  utils.py
template-web-app/: index.html  package-lock.json  package.json  vite.config.js
template-web-app/src/: App.jsx  main.jsx  useStore.ts
